added p tag and changed title

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Simple HTML Example</title>
+  <title>TEAM-VY</title>
 </head>
 <body>
-  <h1><b>Welcome to My Page</b></h1>
+  <h1><b>Welcome to Our Page</b></h1>
+  <p>Hiiii I'm Yashu <br> She is  Varshi...</p>
   <p>This is a <b>simple HTML</b> document.</p>
   <p>HTML stands for <b>HyperText Markup Language</b>.</p>
   <p>It is used to <b>create webpages</b>.</p>
 </body>
 </html>
+
